package.json modified

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://MinaKamaliD.React-Shopping-Cart",
+  "homepage": "http://MinaKamaliD.github.io/React-Shopping-Cart",
   "name": "10",
   "version": "0.1.0",
   "private": true,
